Add redux and redux-thunk import front end logic
Design is to be created and jwt auth to be build

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 API_URI = mongodb://localhost:27017/socourt-test
+JWT_SECRET = socourtbeautifulsolution
+MAILER_EMAIL_ID = georgi.yazovaliyski@gmail.com
+MAILER_PASSWORD = gogo2000
+MAILER_SERVICE_PROVIDER = gmail
