--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "@trendmicro/react-sidenav": "^0.4.5",
+    "ajax": "0.0.4",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
+    "react-redux": "5.0.7",
+    "react-router": "4.3.0",
+    "react-router-dom": "4.3.0",
+    "react-scripts": "1.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "proxy": "http://localhost:5000/",
   "scripts": {
