--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.2",
-    "mongoose": "^5.6.10"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.10",
+    "mongoose-type-email": "^1.0.11",
+    "nodemailer": "^6.3.0",
+    "nodemailer-express-handlebars": "^3.1.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
